[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "kyori3"
version = "0.1.0"
authors = [
  { name="sichangzhao", email="sichangzhao@tencent.com" },
]
description = "An RPC program, including out-of-the-box server and client."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""